implemented support for complete/fail task and subsequent update to job state
