# jt_jess/__init__.py
@@ -1,2 +1,2 @@
 from .jess import get_queues, get_jobs, get_jobs_by_executor, \
-    enqueue_job, next_task, complete_task, register_executor
+    enqueue_job, next_task, register_executor, has_next_task, end_task
